# argus

./: .env.example  .gitignore  DEPRECATION_LIST.md  IMPLEMENTATION_BACKLOG.md  README.md  REBUILD_PLAN.md  benchmark-baseline-lfm25.json  benchmark-baseline-phi4mini.json  benchmark-baseline-qwen25-7b.json  pyproject.toml  setup.sh
.github/workflows/: ci.yml
docker/splunk/: docker-compose.yml
src/argus/: __init__.py  async_utils.py  diagnostics.py  disclosure.py  log_config.py  logging.py
src/argus/agents/: __init__.py  base.py  case_analysis_agent.py  case_report_agent.py  errors.py  ioc_agent.py  orchestrator.py  pivot_benchmark_agent.py  report_agent.py  review_agent.py  (+3 more)
tests/: conftest.py
tests/test_agents/: test_base_agent.py  test_orchestrator.py  test_review_agent.py  test_sub_agents.py
tests/test_benchmarks/: test_incidents.py  test_pivoting.py  test_reporting.py
tests/test_cli/: test_app.py  test_benchmark.py  test_case.py  test_doctor.py  test_mid_run_input.py  test_model.py  test_report.py
tests/test_ingestion/: test_csv_ingestor.py  test_extractors.py  test_json_ingestor.py  test_stix_ingestor.py
tests/test_llm/: test_client.py
tests/test_models/: test_ioc.py  test_vulnerability.py
tests/test_reports/: test_generator.py
tests/test_storage/: test_cases.py
tests/test_tools/: test_nvd.py  test_registry.py  test_urlhaus.py
tests/test_web/: test_chat.py
webui/: index.html  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
webui/e2e/: cases.spec.ts  ui.spec.ts
webui/src/: App.tsx  index.css  main.tsx
(+120 files in other folders)
