[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus"
version = "0.1.0"
description = "Argus — CTI AI Agent Harness powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "diskcache>=5.6.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "markdown>=3.6",
    "stix2>=3.0.1",
    "mitreattack-python>=2.0.5",
    "shodan>=1.31.0",
    "python-dateutil>=2.9.0",
    "structlog>=24.0.0",
    "anyio>=4.0.0",
    "prompt_toolkit>=3.0",
    "ddgs>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
argus = "argus.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["argus"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
